# MDBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  clean_build.bat
.github/: copilot-instructions.md
docs/: hooks_guide.md
src/: main.cpp
src/core/hooks/: Hook.cpp  Hook.hpp  RegisterHook.cpp  RegisterHook.hpp
src/core/hooks/base/: Hook.cpp  Hook.hpp  Types.hpp
src/core/hooks/trampoline/: Trampoline.cpp  Trampoline.hpp
src/core/memory/: MemoryManager.cpp  MemoryManager.hpp
src/gui/: LogManager.cpp  LogWindow.cpp  MainWindow.cpp  MainWindow.hpp
src/gui/bot/core/: BotCore.cpp  BotCore.hpp
src/gui/bot/core/character/: CharacterData.hpp
src/gui/bot/core/context/: BotContext.hpp
src/gui/bot/process/: ProcessListDialog.cpp  ProcessListDialog.hpp
src/gui/bot/ui/: BotTabWidget.cpp  BotTabWidget.hpp
src/gui/bot/ui/modules/character/: CharacterWidget.cpp  CharacterWidget.hpp
src/gui/log/: LogManager.hpp  LogWindow.hpp
tests/: CMakeLists.txt
tests/hooks/: test_hook.cpp
